@startuml
class Game
class Main
class FileIO
class Player
class BankAccount

Main  *-- "*"Game  : has a
Game *-- Player : has a
Player *-- BankAccount : has a
Game *-- FileIO : has a

Main : +Static Main(String[] args)

Game : -ArrayList<Player> players
Game : -FileIO fileio
Game : +Game()

Player : -BankAccount account
Player : -String name
Player : +Player(String name, int balance)
Player : +getBalance()
Player : +getName()
Player : +toString()

FileIO : +readGameData(path)
FileIO : -File file
FileIO : -ArrayList<String> data

BankAccount : -int balance
BankAccount : +BankAccount(int balance)
BankAccount : +getBalance()





@enduml